--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
     </main>
     <footer>
       <p>&copy; <a href="https://kemitchell.com">K.E. Mitchell</a></p>
-      <p>Feedback and patches welcome <a href="{{site.repository_url}}">via GitHub</a>.</p>
+      <p>Feedback and patches welcome <a href="{{ site.repository_url }}/commits/master/{{ page.path }}">via GitHub</a>.</p>
     </footer>
   </body>
 </html>
