--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset=utf-8>
     <title>{{ site.name }} {{ page.title }}</title>
-    <link rel=stylesheet href=https://readable.kemitchell.com/all.css>
+    <link rel=stylesheet href=https://css.kemitchell.com/readable.css>
   </head>
   <body>
     <header>
